Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69280

declarative_ui crash

    XMLWordPrintable

Details

    Description

      https://codereview.qt-project.org/#/c/233675/ Update submodules on 'dev' in qt5

      with other 3 provisioning changes

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1530648633

      https://testresults.qt.io/coin/api/results/qt/qtlocation/94a86e50ecd1f017b2a7971eb8c4bc3600be6c3c/LinuxUbuntu_16_04x86_64LinuxUbuntu_16_04x86_64GCCqtci-linux-Ubuntu-16.04-x86_64-2-eae63fDeveloperBuild_OutOfSourceBuild_QtLibInfix_QtNamespace_BuildExamples_Documentation/3087a6a8deb2741e479ab664eee5d580e452b4df/test_1530650241/log.txt.gz

      agent:2018/07/03 14:32:53 build.go:185: PASS   : declarative_ui::MapItems::initTestCase()
      agent:2018/07/03 14:32:53 build.go:185: QWARN  : declarative_ui::UnknownTestFunc() file:///home/qt/work/install/qml/QtTest/TestCase.qml:1828: TypeError: Cannot call method 'indexOf' of undefined
      ...
      agent:2018/07/03 14:47:43 build.go:240: Killed process after timeout (total time)
      

      https://testresults.qt.io/coin/api/results/qt/qtlocation/94a86e50ecd1f017b2a7971eb8c4bc3600be6c3c/WindowsWindows_10x86_64WindowsWindows_10x86MSVC2017qtci-windows-10-x86_64-10-e46068DebugAndRelease_Release_ForceDebugInfo_OpenGLDynamic/3087a6a8deb2741e479ab664eee5d580e452b4df/test_1530650381/log.txt.gz

      agent:2018/07/03 14:12:50 build.go:185: PASS   : declarative_ui::MapFlick::cleanupTestCase()
      agent:2018/07/03 14:12:50 build.go:185: PASS   : declarative_ui::MapItems::initTestCase()
      agent:2018/07/03 14:12:50 build.go:185: QWARN  : declarative_ui::UnknownTestFunc() file:///C:/Users/qt/work/install/qml/QtTest/TestCase.qml:1828: TypeError: Cannot call method 'indexOf' of undefined
      agent:2018/07/03 14:27:37 build.go:117: Virtual Memory Total: 6441910272, Free:0, UsedPercent:24.000000%
      agent:2018/07/03 14:27:37 build.go:124: |             Process|                                    Name|    Status|     CPU-%|
      agent:2018/07/03 14:27:37 build.go:137: Error while reading process status not implemented yet
      ...
      agent:2018/07/03 14:27:37 build.go:240: Killed process after timeout (total time)
      agent:2018/07/03 14:27:37 build.go:421: Executing scheduled instruction 1 of 2 - Upload all core dumps if there are some

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes